objects/z_SchemaTemp__c.object
<CustomObject>
    <description>Created by the Metadata API</description>
    <fields>
        <fullName>Exercise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exercise</label>
        <referenceTo>Exercise__c</referenceTo>
        <relationshipLabel>z_SchemaTemp</relationshipLabel>
        <relationshipName>z_SchemaTemp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_Status__c</fullName>
        <label>Snapshot Status</label>
        <picklist>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fieldname__c</fullName>
        <label>fieldname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objid__c</fullName>
        <label>objid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objname__c</fullName>
        <label>objname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>z_SchemaTemp</label>
    <nameField>
        <label>z_SchemaTemp</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>